--- a/styles.css
+++ b/styles.css
@@ -323,7 +323,8 @@
    top: 17px;
 }
  .menu__box > li {
-  text-align: center;
+   display: flex;
+   justify-content: center;
 }
  .menu__box {
    display: block;
@@ -333,7 +334,7 @@
    width: 100%;
    height: 100%;
    margin: -15px;
-   padding: 399px 19px;
+   padding: 401px 8px;
    list-style: none;
    text-align: center;
    background-color: #fff;
@@ -345,7 +346,7 @@
    justify-content: center;
    width: max-content;
    text-align: center;
-   padding: 88px 0 0 222px;
+   padding: 88px 0 0 33px;
    color: #333;
    font: 900 56px/34px museo_sans_cyrl500, sans-serif;
    letter-spacing: 3px;
