--- a/styles.css
+++ b/styles.css
@@ -157,20 +157,121 @@
    width: 78%;
 }
 @media (max-width: 1709px) {
-
+ .main__description {
+    width: 79%;
+}
+@media (max-width: 1701px) {
+ .main__title {
+   font: 266px/342px pt_serifbold, arial, helvetica, sans-serif;
+}
+ .main__title::after {
+   right: 100px;
+}
+@media (max-width: 1692px) {
+ .main__title::after {
+   right: 119px;
+}
+  .main__description {
+    width: 83%;
+}
+ .img__picture:nth-child(1) {
+    width: 315px;
+    height: 407px;
+}
+ .img__picture:nth-child(2) {
+    width: 268px;
+    height: 365px;
+}
+ .img__picture:nth-child(3) {
+    width: 198px;
+    height: 365px;
+}
+@media (max-width: 1655px) {
+  .main__title::after {
+   right: 136px;
+}
+ .img__picture:nth-child(1) {
+    width: 280px;
+    height: 407px;
+}
+ .img__picture:nth-child(2) {
+    width: 262px;
+    height: 365px;
+}
+ .img__picture:nth-child(3) {
+    width: 190px;
+    height: 365px;
+}
+@media (max-width: 1590px) {
+ .main__title {
+    font: 242px/342px pt_serifbold, arial, helvetica, sans-serif;
+}
+ .main__title::after {
+   right: 135px;
+   bottom: -2px;
+   font: 90px/143px pt_serifbold, arial, helvetica, sans-serif;
+}
+ .main__description {
+    width: 72%;
+    font: 19px/26px museo_sans_cyrl500, arial, helvetica, sans-serif;
+}
+ .main__button {
+    display: flex;
+    font: 20px/26px museo_sans_cyrl500, arial, helvetica, sans-serif;
+}
+ .img__picture:nth-child(1) {
+    width: 274px;
+    height: 407px;
+}
+ .img__picture:nth-child(2) {
+    width: 256px;
+    height: 365px;
+}
+ .img__picture:nth-child(3) {
+    width: 172px;
+    height: 365px;
+}
+@media (max-width: 1555px) {
+ .main__title::after {
+    right: 111px;
+}
+ .main__description {
+    width: 74%;
+}
+@media (max-width: 1537px) {
+  .main__title::after {
+   bottom: 4px;
+   font: 76px/143px pt_serifbold, arial, helvetica, sans-serif;
+}
+ .main__description {
+    width: 76%;
+}
+@media (min-width: 1500px) {
+ .img__picture:nth-child(1) {
+    width: 256px;
+    height: 367px;
+}
+ .img__picture:nth-child(2) {
+    width: 250px;
+    height: 339px;
+}
+ .img__picture:nth-child(3) {
+    width: 158px;
+    height: 340px;
+}
 @media (max-width: 1367px) {
   .wrapper {
-   margin: 0 0 0 96px
+   margin: 0 0 0 96px 
 }	
  .header {
-   margin: 0 52px 0 0;
-   padding-top: 52px;
+   margin: 0 52px 0 0; 
+   padding-top: 52px; 
 }
   .logo {
-   margin-top: 12px;
-   margin-left: 44px;
-   width: 105px;
-   height: 48px;
+   margin-top: 12px; 
+   margin-left: 44px; 
+   width: 105px;   
+   height: 48px; 
 } 
  .menu__item {
   margin-right: 27px;
@@ -178,7 +279,7 @@
 }
  .main__title {
   font: 200px/220px pt_serifbold, arial, helvetica, sans-serif;
-  margin: 114px 0 0 46px;
+  margin: 114px 0 0 46px; 
 }
  .main__title::after {
    bottom: 5px;
@@ -265,9 +366,6 @@
   height: 273px;
   margin-left: 23px;
 }
-
- 
-
 @media (max-width: 768px) {
  .hamburger-menu {
    display: block;
@@ -294,11 +392,22 @@
    width: 206px;
    height: 83px;
 }
+.menu__item:hover:after, .menu__item_activ:after {
+    position: absolute;
+    left: 0;
+    display: none;
+    content: '';
+    width: 100%;
+    height: 3px;
+    background: #0056EC;
+    opacity: 1;
+    width: 100%;
+}
  .menu__btn {
    display: flex;
    justify-content: center;
    align-items: center;
-   position: fixed;
+   position: absolute;
    top: 104.5px;
    width: 51px;
    height: 49px;
@@ -331,8 +440,8 @@
    position: fixed;
    top: -85px;
    left: -100%;
-   width: 100%;
-   height: 100%;
+   min-width: 100vw;
+   height: 100vw;
    margin: -15px;
    padding: 401px 8px;
    list-style: none;
@@ -407,10 +516,40 @@
     width: 190px;
     height: 40px;
 }
+ .menu__item {
+    display: flex;
+    justify-content: center;
+    width: max-content;
+    text-align: center;
+    padding: 62px 0 0 36px;
+    color: #333;
+    font: 900 44px/17px museo_sans_cyrl500, sans-serif;
+    letter-spacing: 3px;
+    text-decoration: none;
+}
+ .menu__box {
+    display: block;
+    position: fixed;
+    top: -85px;
+    left: -100%;
+    min-width: 100vw;
+    height: 100vw;
+    margin: -15px;
+    padding: 289px 8px;
+    list-style: none;
+    text-align: center;
+    background-color: #fff;
+    box-shadow: 1px 0 6px rgb(0 0 0 / 20%);
+    z-index: 1;
+}
  .menu__btn {
-    top: 40.5px;
-    width: 28px;
-    height: 51px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: absolute;
+   top: 40.5px;
+   width: 28px;
+   height: 51px;
 }
  .menu__btn > span,
  .menu__btn > span::before,
@@ -446,9 +585,9 @@
     font: 16px/21px museo_sans_cyrl500, arial, helvetica, sans-serif;
 }
  .main__button {
-    margin-top: -143px;
-    width: 209px;
-    height: 37px;
-    font: 16px/21px museo_sans_cyrl500, arial, helvetica, sans-serif;
-    margin-left: 77px;
+   margin-top: -143px;
+   width: 209px;
+   height: 37px;
+   font: 16px/21px museo_sans_cyrl500, arial, helvetica, sans-serif;
+   margin-left: 77px;
 }
